# glate

./: .gitignore  CMakeLists.txt  README.md  com.ktechpit.glate.yml
.github/: RELEASE.md
.github/workflows/: release.yml  windows-build.yml
snap/: snapcraft.yaml
snap_launcher/: glate.desktop
src/: CMakeLists.txt  com.ktechpit.glate.metainfo.xml  controlbutton.cpp  controlbutton.h  dark.qss  elidedlabel.cpp  elidedlabel.h  error.h  error.ui  glate.desktop  glate.pro  glate.rc  history.cpp  history.h  history.ui  history_item.ui  icon.xcf  icons.qrc  light.qss  linebyline.cpp  linebyline.h  linebyline.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qhotkey.prc  request.cpp  request.h  resources.qrc  settings.cpp  settings.h  settings.ui  share.cpp  share.h  share.ui  slider.cpp  slider.h  slider.ui  slides.qrc  (+11 more)
src/QHotkey/: qhotkey.cpp  qhotkey.h  qhotkey_mac.cpp  qhotkey_p.h  qhotkey_win.cpp  qhotkey_x11.cpp
src/resources/: lang.glate  tts.glate
src/slides/: 0.html  1.html  2.html  3.html  4.html  5.html  6.html  7.html
